fix: fix jumping description of each job offer when collapsing,
fixes https://github.com/nextcloud/nextcloud.com#493

--- a/assets/css/legacy-fixes.scss
+++ b/assets/css/legacy-fixes.scss
@@ -17,6 +17,11 @@ footer p {
   border-color: white;
 }
 
+.collapse.in p:first-child,
+.collapsing p:first-child {
+  margin: 0;
+}
+
 .Header-Navigation .navbar .overlay-menu ul .btn-primary a {
 /*   width: 169px; */
 /*   height: 52px; */
